--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My Supermarket",
-  "short_name": "Supermarket",
+  "name": "My Supermarket App",
+  "short_name": "Mega",
   "start_url": "https://stock-well-jg1g.vercel.app/",
   "display": "standalone",
   "background_color": "#ffffff",
