--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/local-notifications": "^7.0.1",
     "html5-qrcode": "^2.3.8",
     "next": "15.4.4",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
