--- a/app/manifest.json
+++ b/app/manifest.json
@@ -6,15 +6,15 @@
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
-    {
-      "src": "/faviconv1.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/faviconv1.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  {
+    "src": "/icons/icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "/icons/icon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }
+]
 }
