--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
     "type": "image/png"
   },
   {
-    "src": "/icons/icon-512x5121.png",
+    "src": "/icons/logo.png",
     "sizes": "512x512",
     "type": "image/png"
   }
